--- a/package.json
+++ b/package.json
@@ -6,26 +6,11 @@
   "license": "ISC",
   "main": "server.js",
   "scripts": {
-    "start": "better-npm-run prod",
-    "dev": "better-npm-run dev",
+    "start": "cross-env NODE_ENV=production HOST=0.0.0.0 babel-node ./bin/build.js && babel-node server.js",
+    "dev": "cross-env NODE_ENV=development nodemon -i app -x babel-node server.js",
     "lint": "eslint app",
     "lint:fix": "npm run lint -- --fix",
     "gen": "babel-node bin/generate-component.js"
-  },
-  "betterScripts": {
-    "dev": {
-      "command": "nodemon -i app -x babel-node server.js",
-      "env": {
-        "NODE_ENV": "development"
-      }
-    },
-    "prod": {
-      "command": "babel-node ./bin/build.js && babel-node server.js",
-      "env": {
-        "NODE_ENV": "production",
-        "HOST": "0.0.0.0"
-      }
-    }
   },
   "devDependencies": {
     "autoprefixer": "^6.3.3",
@@ -38,7 +23,6 @@
     "babel-preset-react-hmre": "^1.1.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
-    "better-npm-run": "0.0.9",
     "css-loader": "^0.23.1",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -58,6 +42,7 @@
   "dependencies": {
     "babel-eslint": "^7.1.1",
     "classnames": "^2.2.5",
+    "cross-env": "^3.1.3",
     "eslint": "^3.10.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
