--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "gen": "babel-node bin/generate-component.js"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.3",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.4",
@@ -26,12 +25,10 @@
     "css-loader": "^0.23.1",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "html-webpack-plugin": "^2.9.0",
     "mkdirp": "^0.5.1",
     "node-sass": "^3.8.0",
     "nodemon": "^1.9.2",
     "postcss-loader": "^0.8.1",
-    "precss": "^1.4.0",
     "sass-loader": "^4.0.0",
     "shelljs": "^0.7.1",
     "style-loader": "^0.13.0",
@@ -40,6 +37,7 @@
     "webpack-hot-middleware": "^2.12.1"
   },
   "dependencies": {
+    "autoprefixer": "^6.3.3",
     "babel-eslint": "^7.1.1",
     "classnames": "^2.2.5",
     "cross-env": "^3.1.3",
@@ -48,7 +46,9 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "^6.7.1",
+    "html-webpack-plugin": "^2.9.0",
     "normalize.css": "^4.2.0",
+    "precss": "^1.4.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.5",
@@ -56,6 +56,7 @@
     "redux-actions": "^0.10.1",
     "redux-form": "^5.3.1",
     "redux-thunk": "^2.1.0",
+    "webpack": "2.1.0-beta.25",
     "whatwg-fetch": "^1.0.0"
   }
 }
