--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "license": "ISC",
   "main": "server.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production HOST=0.0.0.0 babel-node ./bin/build.js && babel-node server.js",
-    "dev": "cross-env NODE_ENV=development nodemon -i app -x babel-node server.js",
+    "start": "cross-env NODE_ENV=production HOST=0.0.0.0 babel-node ./bin/build.js && babel-node server",
+    "dev": "cross-env NODE_ENV=development nodemon -i app -x babel-node server",
     "lint": "eslint app",
     "lint:fix": "npm run lint -- --fix",
     "gen": "babel-node bin/generate-component.js"
   },
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
+    "autoprefixer": "^6.3.3",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.5.2",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.5.0",
@@ -22,32 +25,22 @@
     "babel-preset-react-hmre": "^1.1.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
-    "css-loader": "^0.23.1",
-    "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "mkdirp": "^0.5.1",
-    "node-sass": "^3.8.0",
-    "nodemon": "^1.9.2",
-    "postcss-loader": "^0.8.1",
-    "sass-loader": "^4.0.0",
-    "shelljs": "^0.7.1",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.14",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.1"
-  },
-  "dependencies": {
-    "autoprefixer": "^6.3.3",
-    "babel-eslint": "^7.1.1",
     "classnames": "^2.2.5",
     "cross-env": "^3.1.3",
+    "css-loader": "^0.23.1",
     "eslint": "^3.10.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "^6.7.1",
+    "express": "^4.14.0",
+    "extract-text-webpack-plugin": "2.0.0-beta.4",
     "html-webpack-plugin": "^2.9.0",
+    "mkdirp": "^0.5.1",
+    "node-sass": "^3.8.0",
+    "nodemon": "^1.9.2",
     "normalize.css": "^4.2.0",
+    "postcss-loader": "^0.8.1",
     "precss": "^1.4.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.7",
@@ -56,7 +49,12 @@
     "redux-actions": "^0.10.1",
     "redux-form": "^5.3.1",
     "redux-thunk": "^2.1.0",
+    "sass-loader": "^4.0.0",
+    "shelljs": "^0.7.1",
+    "style-loader": "^0.13.0",
     "webpack": "2.1.0-beta.25",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.12.1",
     "whatwg-fetch": "^1.0.0"
   }
 }
