--- a/.eslintrc
+++ b/.eslintrc
@@ -6,11 +6,12 @@
   },
   "extends": "airbnb",
   "rules": {
-    "semi": "off",
-    "linebreak-style": 0,
-    "no-underscore-dangle": 0,
+    "import/no-named-as-default": [0],
     "import/no-unresolved": [2, { caseSensitive: false }],
+    "linebreak-style": [0],
+    "no-underscore-dangle": [0],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/no-unused-prop-types": [1, { "skipShapeProps": true }],
+    "semi": [2, "never"],
   }
 }
