--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "cross-env NODE_ENV=development nodemon -i app -x babel-node server",
     "lint": "eslint app",
     "lint:fix": "npm run lint -- --fix",
-    "gen": "babel-node bin/generate-component.js"
+    "create-component": "babel-node bin/generators/component",
+    "create-container": "babel-node bin/generators/container"
   },
   "devDependencies": {},
   "dependencies": {
