--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
   },
   "extends": "airbnb",
   "rules": {
+    "import/no-extraneous-dependencies": [0],
     "import/no-named-as-default": [0],
     "import/no-unresolved": [2, { caseSensitive: false }],
     "linebreak-style": [0],
