--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "import/no-unresolved": [2, { caseSensitive: false }],
     "linebreak-style": [0],
     "no-underscore-dangle": [0],
+    "no-unused-vars": ["error", { "varsIgnorePattern": "PropTypes" }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/no-unused-prop-types": [1, { "skipShapeProps": true }],
     "semi": [2, "never"],
