--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^0.14.8",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.5",
+    "react-router": "^3.0.0",
     "redux": "^3.5.2",
     "redux-actions": "^0.10.1",
     "redux-form": "^5.3.1",
