--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "redux": "^3.5.2",
     "redux-actions": "^0.10.1",
     "redux-form": "^5.3.1",
+    "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^4.0.0",
     "shelljs": "^0.7.1",
