--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-core": "^6.5.2",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.0",
@@ -48,6 +49,7 @@
     "redux-actions": "^0.10.1",
     "redux-form": "^5.3.1",
     "redux-logger": "^2.7.4",
+    "redux-saga": "^0.13.0",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^4.0.0",
     "shelljs": "^0.7.1",
