--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "nodemon": "^1.9.2",
     "normalize.css": "^4.2.0",
     "postcss-loader": "^0.8.1",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.7",
+    "react": "15.4.1",
+    "react-dom": "15.4.1",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
-    "redux": "^3.5.2",
+    "redux": "3.6.0",
     "redux-actions": "^0.10.1",
     "redux-logger": "^2.7.4",
     "redux-saga": "^0.13.0",
