--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,11 @@
   "parser": "babel-eslint",
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "jest": true,
+  },
+  "globals": {
+    "expect": true,
   },
   "extends": "airbnb",
   "rules": {
