--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     "lint": "eslint app",
     "lint:fix": "npm run lint -- --fix",
     "create-component": "babel-node bin/generators/component",
-    "create-container": "babel-node bin/generators/container"
+    "create-container": "babel-node bin/generators/container",
+    "test": "jest"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|scss)$": "identity-obj-proxy"
+    },
+    "testEnvironment": "node"
   },
   "devDependencies": {},
   "dependencies": {
@@ -19,6 +26,7 @@
     "babel-cli": "^6.11.4",
     "babel-core": "^6.5.2",
     "babel-eslint": "^7.1.1",
+    "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.5.0",
@@ -28,6 +36,7 @@
     "classnames": "^2.2.5",
     "cross-env": "^3.1.3",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.6.0",
     "eslint": "^3.10.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
@@ -36,12 +45,15 @@
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "html-webpack-plugin": "^2.9.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^18.0.0",
     "mkdirp": "^0.5.1",
     "node-sass": "^3.8.0",
     "nodemon": "^1.9.2",
     "normalize.css": "^4.2.0",
     "postcss-loader": "^0.8.1",
     "react": "15.4.1",
+    "react-addons-test-utils": "^15.4.1",
     "react-dom": "15.4.1",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
