--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "15.4.1",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
+    "react-test-renderer": "^15.4.1",
     "redux": "3.6.0",
     "redux-actions": "^0.10.1",
     "redux-logger": "^2.7.4",
