Updating package.json

--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "react-redux-minimal",
-  "version": "0.0.1",
-  "description": "Simple React-Redux boilerplate for hiring challenges",
+  "version": "0.7.0",
+  "description": "(Not so) Minimal React-Redux boilerplate",
   "author": "Artem Platonov",
   "license": "ISC",
-  "main": "server.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production HOST=0.0.0.0 babel-node ./bin/build.js && babel-node server",
     "dev": "cross-env NODE_ENV=development nodemon -i app -x babel-node ./bin/start",
     "lint": "eslint app",
     "lint:fix": "npm run lint -- --fix",
-    "create-component": "babel-node bin/generators/component",
-    "create-container": "babel-node bin/generators/container",
+    "create:component": "babel-node bin/generators/component",
+    "create:container": "babel-node bin/generators/container",
     "test": "jest"
   },
   "jest": {
@@ -20,45 +19,47 @@
     },
     "testEnvironment": "node"
   },
-  "devDependencies": {},
-  "dependencies": {
-    "autoprefixer": "^6.3.3",
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.5.2",
+  "devDependencies": {
     "babel-eslint": "^7.1.1",
     "babel-jest": "^18.0.0",
-    "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "classnames": "^2.2.5",
-    "cross-env": "^3.1.3",
-    "css-loader": "^0.23.1",
-    "css-modules-require-hook": "^4.0.5",
     "enzyme": "^2.6.0",
     "eslint": "^3.10.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "^6.7.1",
-    "express": "^4.14.0",
-    "extract-text-webpack-plugin": "2.0.0-beta.4",
-    "html-webpack-plugin": "^2.9.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^18.0.0",
+    "react-addons-test-utils": "^15.4.1",
+    "react-test-renderer": "^15.4.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.12.1"
+  },
+  "dependencies": {
+    "autoprefixer": "^6.3.3",
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "classnames": "^2.2.5",
+    "cross-env": "^3.1.3",
+    "css-loader": "^0.23.1",
+    "css-modules-require-hook": "^4.0.5",
+    "express": "^4.14.0",
+    "extract-text-webpack-plugin": "2.0.0-beta.4",
     "mkdirp": "^0.5.1",
     "node-sass": "^3.8.0",
     "nodemon": "^1.9.2",
     "normalize.css": "^4.2.0",
     "postcss-loader": "^0.8.1",
     "react": "15.4.1",
-    "react-addons-test-utils": "^15.4.1",
     "react-dom": "15.4.1",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
-    "react-test-renderer": "^15.4.1",
     "redux": "3.6.0",
     "redux-actions": "^0.10.1",
     "redux-logger": "^2.7.4",
@@ -67,8 +68,6 @@
     "shelljs": "^0.7.1",
     "style-loader": "^0.13.0",
     "webpack": "2.1.0-beta.25",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.1",
     "whatwg-fetch": "^1.0.0"
   }
 }
