--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react": "^6.7.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^18.0.0",
+    "pre-commit": "^1.2.2",
     "react-addons-test-utils": "^15.4.1",
     "react-test-renderer": "^15.4.1",
     "webpack-dev-middleware": "^1.6.1",
@@ -69,5 +70,9 @@
     "style-loader": "^0.13.0",
     "webpack": "2.1.0-beta.25",
     "whatwg-fetch": "^1.0.0"
-  }
+  },
+  "pre-commit": [
+    "lint",
+    "test"
+  ]
 }
