--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production babel-node ./bin/start",
     "dev": "cross-env NODE_ENV=development nodemon -i app -x babel-node ./bin/start",
-    "lint": "eslint app",
-    "lint:fix": "npm run lint -- --fix",
+    "lint": "npm run lint:js && npm run lint:css",
+    "lint:js": "eslint app",
+    "lint:css": "stylelint \"app/**/*.[sc]css\"",
+    "lint:fix": "npm run lint:js -- --fix",
     "create:component": "babel-node bin/generators/component",
     "create:container": "babel-node bin/generators/container",
     "test": "jest"
@@ -68,6 +70,8 @@
     "sass-loader": "^4.0.0",
     "shelljs": "^0.7.1",
     "style-loader": "^0.13.0",
+    "stylelint": "^7.7.1",
+    "stylelint-config-standard": "^15.0.1",
     "webpack": "2.1.0-beta.25",
     "whatwg-fetch": "^1.0.0"
   },
